[Qt] Broken back/forward after using ErrorPageExtension to set error page https://bugs.webkit.org/show_bug.cgi?id=30573

Reviewed by Antti Koivisto.

WebCore:

Make FrameLoader::checkLoadCompleteForThisFrame method
to check for any working DocumentLoader instance (through
activeDocumentLoader()) instead of only checking for
'm_provisionalDocumentLoader' in order to decide to if
it is going to reset of not the back and forward history.
after an error page has been loaded.

Test: LayoutTests/fast/history/back-forward-reset-after-error-handling.html

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::checkLoadCompleteForThisFrame):

WebKit/qt:

Implemented autotests for covering the back/forward
reset problem involving error pages.

* tests/qwebpage/tst_qwebpage.cpp:
(tst_QWebPage::errorPageExtension):

LayoutTests:

Skipped fast/history/back-forward-reset-after-error-handling.html
in mac, gtk and win DRT, because their DRT do not support yet
error pages handling.

* fast/history/back-forward-reset-after-error-handling.html:
* platform/gtk/Skipped:
* platform/mac/Skipped:
* platform/win/Skipped:

Canonical link: https://commits.webkit.org/42467@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51038 268f45cc-cd09-0410-ab3c-d52691b4dbfc